--- a/package.json
+++ b/package.json
@@ -6,10 +6,29 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/express": "^4.17.11",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.9",
+    "axios": "^0.21.1",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "ejs": "^3.1.5",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "helmet": "^4.2.0",
+    "http-proxy-middleware": "^2.0.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "request-ip": "^2.1.3",
+    "session-file-store": "^1.5.0",
     "web-vitals": "^1.1.2"
+  },
+  "devDependencies": {
+    "typescript": "^4.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
