--- a/package.json
+++ b/package.json
@@ -4,17 +4,8 @@
   "description": "minesweeper2",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.6.1",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/express": "^4.17.11",
-    "@types/react": "^17.0.14",
-    "@types/react-cookies": "^0.1.0",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-redux": "^7.1.18",
-    "@types/react-router-dom": "^5.1.8",
     "axios": "^0.21.1",
+    "cookie-parser": "^1.4.6",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
@@ -30,7 +21,18 @@
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.6.1",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express": "^4.17.11",
     "@types/lodash": "^4.14.173",
+    "@types/react": "^17.0.14",
+    "@types/react-cookies": "^0.1.0",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.18",
+    "@types/react-router-dom": "^5.1.8",
     "typescript": "^4.3.5"
   },
   "scripts": {
