--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.21.1",
     "cookie-parser": "^1.4.6",
     "lodash": "^4.17.21",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
@@ -28,6 +29,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.11",
     "@types/lodash": "^4.14.173",
+    "@types/query-string": "^6.3.0",
     "@types/react": "^17.0.14",
     "@types/react-cookies": "^0.1.0",
     "@types/react-dom": "^17.0.9",
