--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "request-ip": "^2.1.3",
+    "styled-components": "^5.3.3",
     "tslint": "^6.1.3",
     "tslint-react": "^5.0.0",
     "web-vitals": "^1.1.2"
@@ -35,6 +36,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.8",
+    "@types/styled-components": "^5.1.16",
     "typescript": "^4.3.5"
   },
   "scripts": {
