--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "minesweeper2",
   "private": true,
   "dependencies": {
+    "@nivo/bar": "^0.75.0",
+    "@nivo/core": "^0.75.0",
+    "@nivo/pie": "^0.75.0",
     "axios": "^0.21.1",
     "cookie-parser": "^1.4.6",
     "html-react-parser": "^1.4.2",
