[add]테스트 환경 구성 및 테스트 코드 작성

--- a/.babelrc
+++ b/.babelrc
@@ -11,7 +11,10 @@
         }
       }
     ],
-    "@babel/react",
-    "@babel/typescript" // Typescript(타입스크립트)가 컴파일 가능하도록 추가
-  ]
+    "@babel/preset-typescript",
+    "@babel/preset-react"
+    // "@babel/react",
+    // "@babel/typescript" // Typescript(타입스크립트)가 컴파일 가능하도록 추가
+  ],
+  "plugins": ["@babel/plugin-transform-runtime"]
 }
