--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "minesweeper2",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.17.0",
     "@nivo/bar": "^0.75.0",
     "@nivo/core": "^0.75.0",
     "@nivo/pie": "^0.75.0",
     "axios": "^0.21.1",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
     "cookie-parser": "^1.4.6",
     "html-react-parser": "^1.4.2",
     "lodash": "^4.17.21",
@@ -37,7 +39,6 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/cookie-parser": "^1.4.2",
-    "@types/express": "^4.17.11",
     "@types/lodash": "^4.14.173",
     "@types/query-string": "^6.3.0",
     "@types/react": "^17.0.14",
@@ -50,6 +51,9 @@
     "css-loader": "^6.5.1",
     "fork-ts-checker-webpack-plugin": "^6.5.0",
     "html-webpack-plugin": "^5.5.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.4.7",
+    "jest-environment-jsdom": "^27.4.6",
     "rimraf": "^3.0.2",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
@@ -62,7 +66,7 @@
     "crypto": false
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "webpack serve --mode development",
     "prebuild": "rimraf dist",
     "build": "webpack --progress --mode production",
