--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.16",
     "babel-loader": "^8.2.3",
+    "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.5.1",
     "fork-ts-checker-webpack-plugin": "^6.5.0",
     "html-webpack-plugin": "^5.5.0",
