[add,fix]리팩토링 중

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.4.6",
     "html-react-parser": "^1.4.2",
     "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
@@ -40,6 +41,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/cookie-parser": "^1.4.2",
     "@types/lodash": "^4.14.173",
+    "@types/lodash-es": "^4.17.6",
     "@types/query-string": "^6.3.0",
     "@types/react": "^17.0.14",
     "@types/react-cookies": "^0.1.0",
