--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "cookie-parser": "^1.4.6",
     "html-react-parser": "^1.4.2",
     "lodash": "^4.17.21",
-    "lodash-es": "^4.17.21",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
@@ -24,11 +23,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
-    "request-ip": "^2.1.3",
-    "styled-components": "^5.3.3",
-    "tslint": "^6.1.3",
-    "tslint-react": "^5.0.0",
-    "web-vitals": "^1.1.2"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
@@ -41,7 +36,6 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/cookie-parser": "^1.4.2",
     "@types/lodash": "^4.14.173",
-    "@types/lodash-es": "^4.17.6",
     "@types/query-string": "^6.3.0",
     "@types/react": "^17.0.14",
     "@types/react-cookies": "^0.1.0",
