--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@nivo/pie": "^0.75.0",
     "axios": "^0.21.1",
     "babel-plugin-transform-export-extensions": "^6.22.0",
+    "chart.js": "^3.7.1",
     "cookie-parser": "^1.4.6",
     "html-react-parser": "^1.4.2",
     "lodash": "^4.17.21",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^17.0.2",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.4",
