--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "noImplicitAny": false,
     "removeComments": false,
     "sourceMap": true,
-    "allowJs": true,
+    "allowJs": false,
     "jsx": "react-jsx",
     "allowSyntheticDefaultImports": true,
     "keyofStringsOnly": true,
