--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,8 @@
     "./node_modules/**/*",
     "./dist"
   ],
-  "include": ["./src/**/*", "@type"]
- }
- 
+  "include": [
+    "./src/**/*",
+    "@type"
+  ]
+}
